fix alignment

--- a/hb/style.css
+++ b/hb/style.css
@@ -57,7 +57,7 @@ a:link {
   font-size: 22px;
   color: rgb(0, 0, 0);
   text-shadow: rgb(255, 255, 255) 1px 0 10px;
-  line-height: 22px;
+  line-height: 24px;
   border: none;
   outline: none;
   background: none;
